# openni2_primesense_viewer

./: CMakeLists.txt
cmake_modules/: FindOpenNI2.cmake
